[package]
name = "lantern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dotenv = "0.15.0"
hex = "0.4.3"
sha2 = "0.10.8"
solana-client = "1.18.3"
tokio = { version = "1.36.0", features = ["full"] }
